fix: get docker compose working for postgres data load

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ x-var:
     spar
   - &POSTGRES_FLYWAY_URL_POSTGRES
     jdbc:postgresql://postgres:5432/spar
+  - &SOURCE_DATA_FOLDER
+    /app/data
   - &ORACLE_USER
     THE
   - &ORACLE_PASSWORD
@@ -26,8 +28,6 @@ x-var:
     1521
   - &ORACLE_FLYWAY_URL
     jdbc:oracle:thin:@//oracle-spar:1521/DBDOCK_01
-  - &ORACLE_SOURCE_DATA_FOLDER
-    /app/data
 
 
 
@@ -38,7 +38,15 @@ x-postgres-vars: &postgres-vars
   POSTGRES_PASSWORD: *POSTGRES_PASSWORD
   POSTGRES_PORT: *POSTGRES_PORT
   FLYWAY_URL_POSTGRES: *POSTGRES_FLYWAY_URL_POSTGRES
-  #FLYWAY_URL_POSTGRES: jdbc:postgresql://postgres:5432/spar
+
+  POSTGRES_HOST_LOCAL: *POSTGRES_HOST
+  POSTGRES_PORT_LOCAL: *POSTGRES_PORT
+  POSTGRES_SERVICE_LOCAL: *POSTGRES_DATABASE
+  POSTGRES_USER_LOCAL: *POSTGRES_USER
+  POSTGRES_PASSWORD_LOCAL: *POSTGRES_PASSWORD
+  POSTGRES_SCHEMA_TO_SYNC_LOCAL: *POSTGRES_SCHEMA
+  LOCAL_DATA_DIR: *SOURCE_DATA_FOLDER
+
 
 x-oracle-vars: &oracle-vars
   # Used by the Oracle container in the setup
@@ -51,7 +59,7 @@ x-oracle-vars: &oracle-vars
   ORACLE_SYNC_PASSWORD: *ORACLE_PASSWORD
   ORACLE_SYNC_USER: *ORACLE_USER
   FLYWAY_URL: *ORACLE_FLYWAY_URL
-  LOCAL_DATA_DIR: *ORACLE_SOURCE_DATA_FOLDER
+  LOCAL_DATA_DIR: *SOURCE_DATA_FOLDER
   # used by the data load process
   ORACLE_HOST_LOCAL: *ORACLE_HOST
   ORACLE_PORT_LOCAL: *ORACLE_PORT
@@ -127,14 +135,15 @@ services:
     image: nr-fds-pyetl-oracle-data-load:latest
     build:
         context: ./  # Path to the directory containing the Dockerfile
-        dockerfile: Dockerfile.data_load  # Name of the Dockerfile (optional if named "Dockerfile")
+        dockerfile: Dockerfile.dbutils  # Name of the Dockerfile (optional if named "Dockerfile")
     # image: python:3.13-slim-bookworm
     container_name: postgres-data-load
     working_dir: /app
-    entrypoint: ["python", "db_env_utils/main_spar_ingest.py", TEST]
+    entrypoint: ["python", "db_env_utils/main_ingest.py", OC_POSTGRES, TEST]
     volumes:
       - "./docker-compose.yml:/app/docker-compose.yml"
-      - "./data:/app/data"
+      - "./ora-env/data/docker:/app/data"
+
     environment:
       <<: [*postgres-vars]
     env_file:
@@ -192,7 +201,6 @@ services:
     # "CMD",
     # entrypoint: [ "/application/docker_run_ORA_TEST.sh"]
     working_dir: /app
-
     entrypoint: ["python", "db_env_utils/main_ingest.py", ORA, TEST]
     volumes:
       # - "./data_prep:/app"
@@ -208,8 +216,8 @@ services:
         condition: service_completed_successfully
 
   # debug service, useful for understanding how environment variables work
-  etl:
-    container_name: etl
+  etl-env-setup:
+    container_name: etl-env-setup
     image: functions/alpine:health
     command: ["/bin/sh", "-c", "echo Postgres and Oracle envs now live!"]
     depends_on:
@@ -236,7 +244,7 @@ services:
     - "./sync/poetry.lock:/application/poetry.lock"
     - "./sync/pyproject.toml:/application/pyproject.toml"
     depends_on:
-      etl:
+      etl-env-setup:
         condition: service_completed_successfully
 
   cloudbeaver:
