feat: 18 generic dev db (#111)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ x-var:
     spar
   - &POSTGRES_FLYWAY_URL_POSTGRES
     jdbc:postgresql://postgres:5432/spar
+  - &SOURCE_DATA_FOLDER
+    /app/data
   - &ORACLE_USER
     THE
   - &ORACLE_PASSWORD
@@ -36,9 +38,18 @@ x-postgres-vars: &postgres-vars
   POSTGRES_PASSWORD: *POSTGRES_PASSWORD
   POSTGRES_PORT: *POSTGRES_PORT
   FLYWAY_URL_POSTGRES: *POSTGRES_FLYWAY_URL_POSTGRES
-  #FLYWAY_URL_POSTGRES: jdbc:postgresql://postgres:5432/spar
+
+  POSTGRES_HOST_LOCAL: *POSTGRES_HOST
+  POSTGRES_PORT_LOCAL: *POSTGRES_PORT
+  POSTGRES_SERVICE_LOCAL: *POSTGRES_DATABASE
+  POSTGRES_USER_LOCAL: *POSTGRES_USER
+  POSTGRES_PASSWORD_LOCAL: *POSTGRES_PASSWORD
+  POSTGRES_SCHEMA_TO_SYNC_LOCAL: *POSTGRES_SCHEMA
+  LOCAL_DATA_DIR: *SOURCE_DATA_FOLDER
+
 
 x-oracle-vars: &oracle-vars
+  # Used by the Oracle container in the setup
   ORACLE_DATABASE: *ORACLE_DATABASE
   ORACLE_PASSWORD: *ORACLE_PASSWORD
   ORACLE_HOST: *ORACLE_HOST
@@ -48,8 +59,21 @@ x-oracle-vars: &oracle-vars
   ORACLE_SYNC_PASSWORD: *ORACLE_PASSWORD
   ORACLE_SYNC_USER: *ORACLE_USER
   FLYWAY_URL: *ORACLE_FLYWAY_URL
+  LOCAL_DATA_DIR: *SOURCE_DATA_FOLDER
+  # used by the data load process
+  ORACLE_HOST_LOCAL: *ORACLE_HOST
+  ORACLE_PORT_LOCAL: *ORACLE_PORT
+  ORACLE_SERVICE_LOCAL: *ORACLE_DATABASE
+  ORACLE_USER_LOCAL: *ORACLE_USER
+  ORACLE_PASSWORD_LOCAL: *ORACLE_PASSWORD
+  ORACLE_SCHEMA_TO_SYNC_LOCAL: *ORACLE_USER
 
 services:
+  # dbutils:
+  #   image: ghcr.io/astral-sh/uv:python3.13-bookworm-slim
+  #   container_name: dbutils
+
+
   postgres:
     #image: postgis/postgis:15-master
     image: postgis/postgis:17-3.5-alpine
@@ -111,14 +135,15 @@ services:
     image: nr-fds-pyetl-oracle-data-load:latest
     build:
         context: ./  # Path to the directory containing the Dockerfile
-        dockerfile: Dockerfile.data_load  # Name of the Dockerfile (optional if named "Dockerfile")
+        dockerfile: Dockerfile.dbutils  # Name of the Dockerfile (optional if named "Dockerfile")
     # image: python:3.13-slim-bookworm
     container_name: postgres-data-load
     working_dir: /app
-    entrypoint: ["python", "db_env_utils/main_spar_ingest.py", TEST]
+    entrypoint: ["python", "db_env_utils/main_ingest.py", OC_POSTGRES, TEST]
     volumes:
       - "./docker-compose.yml:/app/docker-compose.yml"
-      - "./data:/app/data"
+      - "./ora-env/data/docker:/app/data"
+
     environment:
       <<: [*postgres-vars]
     env_file:
@@ -154,7 +179,7 @@ services:
     container_name: oracle-migrations
     command: info migrate info
     volumes:
-      - "./data_prep/migrations_ora/sql:/flyway/sql:ro"
+      - "./ora-env/migrations/ora:/flyway/sql:ro"
     environment:
       <<: *oracle-vars
       FLYWAY_USER: *ORACLE_USER
@@ -170,18 +195,18 @@ services:
     image: nr-fds-pyetl-oracle-data-load:latest
     build:
         context: ./  # Path to the directory containing the Dockerfile
-        dockerfile: Dockerfile.data_load  # Name of the Dockerfile (optional if named "Dockerfile")
+        dockerfile: Dockerfile.dbutils  # Name of the Dockerfile (optional if named "Dockerfile")
     # image: python:3.13-slim-bookworm
     container_name: oracle-data-load
     # "CMD",
     # entrypoint: [ "/application/docker_run_ORA_TEST.sh"]
     working_dir: /app
-
-    entrypoint: ["python", "db_env_utils/main_ora_ingest.py", TEST]
+    entrypoint: ["python", "db_env_utils/main_ingest.py", ORA, TEST]
     volumes:
       # - "./data_prep:/app"
       - "./docker-compose.yml:/app/docker-compose.yml"
-      - "./data:/app/data"
+      - "./ora-env/data/docker:/app/data"
+      - "./ora-env/data/temp/data_classification.xlsx:/app/data/temp/data_classification.xlsx"
     environment:
       <<: [*oracle-vars]
     env_file:
@@ -191,8 +216,8 @@ services:
         condition: service_completed_successfully
 
   # debug service, useful for understanding how environment variables work
-  etl:
-    container_name: etl
+  etl-env-setup:
+    container_name: etl-env-setup
     image: functions/alpine:health
     command: ["/bin/sh", "-c", "echo Postgres and Oracle envs now live!"]
     depends_on:
@@ -219,7 +244,7 @@ services:
     - "./sync/poetry.lock:/application/poetry.lock"
     - "./sync/pyproject.toml:/application/pyproject.toml"
     depends_on:
-      etl:
+      etl-env-setup:
         condition: service_completed_successfully
 
   cloudbeaver:
