fix: set target to test for init

--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -30,6 +30,8 @@ jobs:
     with:
       run-etl: true
       test-mode: true
+      # target: ${{ github.event.number }}
+      target: test
       triggers: ('sync/')
 
   results:
