fix: stupid template can't do math

--- a/common/openshift.init.yml
+++ b/common/openshift.init.yml
@@ -21,7 +21,7 @@ parameters:
     required: true
   - name: ORACLE_PORT
     description: Oracle database port
-    value: 1543
+    value: "1543"
 objects:
   - apiVersion: v1
     kind: Secret
