--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ x-var:
     jdbc:postgresql://postgres:5432/spar
   - &SOURCE_DATA_FOLDER
     /app/data
+  - &DATA_CLASSIFICATION_SS
+    /app/data_classification.xlsx
   - &ORACLE_USER
     THE
   - &ORACLE_PASSWORD
@@ -59,7 +61,9 @@ x-oracle-vars: &oracle-vars
   ORACLE_SYNC_PASSWORD: *ORACLE_PASSWORD
   ORACLE_SYNC_USER: *ORACLE_USER
   FLYWAY_URL: *ORACLE_FLYWAY_URL
+  # data load process
   LOCAL_DATA_DIR: *SOURCE_DATA_FOLDER
+  DATA_CLASSIFICATION_SS: *DATA_CLASSIFICATION_SS
   # used by the data load process
   ORACLE_HOST_LOCAL: *ORACLE_HOST
   ORACLE_PORT_LOCAL: *ORACLE_PORT
@@ -139,10 +143,13 @@ services:
     # image: python:3.13-slim-bookworm
     container_name: postgres-data-load
     working_dir: /app
-    entrypoint: ["python", "db_env_utils/main_ingest.py", OC_POSTGRES, TEST]
+    #entrypoint: ["python", "db_env_utils/main_ingest.py", OC_POSTGRES, TEST]
+    entrypoint: ["bash", "/app/run_data_inject_oc.sh"]
+
     volumes:
       - "./docker-compose.yml:/app/docker-compose.yml"
-      - "./ora-env/data/docker:/app/data"
+      #- "./ora-env/data/docker:/app/data"
+      - "oracle-data-load:/app/data"
 
     environment:
       <<: [*postgres-vars]
@@ -193,6 +200,7 @@ services:
   # doesnt work, references non existing shell script
   oracle-data-load:
     image: nr-fds-pyetl-oracle-data-load:latest
+    user: "0:0"
     build:
         context: ./  # Path to the directory containing the Dockerfile
         dockerfile: Dockerfile.dbutils  # Name of the Dockerfile (optional if named "Dockerfile")
@@ -201,12 +209,11 @@ services:
     # "CMD",
     # entrypoint: [ "/application/docker_run_ORA_TEST.sh"]
     working_dir: /app
-    entrypoint: ["python", "db_env_utils/main_ingest.py", ORA, PROD]
+    # entrypoint: ["python", "db_env_utils/main_ingest.py", ORA, PROD]
+    entrypoint: ["bash", "/app/run_data_inject_ora.sh"]
     volumes:
-      # - "./data_prep:/app"
-      - "./docker-compose.yml:/app/docker-compose.yml"
-      - "./ora-env/data/docker:/app/data"
-      - "./ora-env/data/temp/data_classification.xlsx:/app/data/temp/data_classification.xlsx"
+      - "oracle-data-load:/app/data"
+      - "./ora-env/data/temp/data_classification.xlsx:/app/data_classification.xlsx"
     env_file:
       - ".env"
     environment:
@@ -238,15 +245,18 @@ services:
       EXECUTION_ID: 9999
       ORACLE_PORT: *ORACLE_PORT
       ORACLE_SERVICE: *ORACLE_DATABASE
+      ORA_NON_ENRCYPT_LISTENER: True
     command: ["python", "/app/src/main.py"]
     # command: ["sleep", "10000"]
     volumes:
     - "./sync/src:/app/src"
-    - "./sync/poetry.lock:/application/poetry.lock"
+    - "./sync/uv.lock:/application/uv.lock"
     - "./sync/pyproject.toml:/application/pyproject.toml"
     depends_on:
       etl-env-setup:
         condition: service_completed_successfully
+
+
 
   cloudbeaver:
     profiles: ["cloudbeaver"]
@@ -275,3 +285,4 @@ services:
 volumes:
   oracle-data:
   postgres-migrations-volume:
+  oracle-data-load:
