--- a/Dockerfile.dbutils
+++ b/Dockerfile.dbutils
@@ -1,4 +1,4 @@
-FROM  ghcr.io/astral-sh/uv:python3.13-bookworm-slim as builder
+FROM  ghcr.io/astral-sh/uv:python3.13-bookworm-slim AS builder
 
 # Install the project into `/app`
 WORKDIR /app
@@ -23,17 +23,21 @@ RUN cd data-population && \
 
 # ---------------------------------------
 # Second stage... copy the venv to final image
-FROM  ghcr.io/astral-sh/uv:python3.13-bookworm-slim as runtime
+FROM  ghcr.io/astral-sh/uv:python3.13-bookworm-slim AS runtime
 
 RUN apt-get update && \
     apt-get --no-install-recommends install -y \
-    postgresql-client \
+    postgresql-client gosu \
     && apt-get clean
 
 RUN groupadd -r derek && useradd -r -g derek derek
+RUN mkdir -p /home/derek && chown derek:derek /home/derek
+ENV HOME=/home/derek
 
 COPY --from=builder /app/data-population/.venv /app/.venv
 COPY --from=builder --chown=root:root --chmod=755 /app/data-population/ /app/
+COPY data_prep/data_ingest/run_data_inject_ora.sh /app/run_data_inject_ora.sh
+COPY data_prep/data_ingest/run_data_inject_oc.sh /app/run_data_inject_oc.sh
 
 
 # Then, add the rest of the project source code and install it
@@ -45,5 +49,8 @@ COPY --from=builder --chown=root:root --chmod=755 /app/data-population/ /app/
 ENV PATH="/app/.venv/bin:$PATH"
 
 USER derek
+# ensure the duck db extensions are installed
+RUN uv run python -c "import duckdb; duckdb.connect().install_extension('spatial')"
+
 ENTRYPOINT []
 
