feat: 118 local testing (#120)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ x-var:
     jdbc:postgresql://postgres:5432/spar
   - &SOURCE_DATA_FOLDER
     /app/data
+  - &DATA_CLASSIFICATION_SS
+    /app/data_classification.xlsx
   - &ORACLE_USER
     THE
   - &ORACLE_PASSWORD
@@ -59,7 +61,9 @@ x-oracle-vars: &oracle-vars
   ORACLE_SYNC_PASSWORD: *ORACLE_PASSWORD
   ORACLE_SYNC_USER: *ORACLE_USER
   FLYWAY_URL: *ORACLE_FLYWAY_URL
+  # data load process
   LOCAL_DATA_DIR: *SOURCE_DATA_FOLDER
+  DATA_CLASSIFICATION_SS: *DATA_CLASSIFICATION_SS
   # used by the data load process
   ORACLE_HOST_LOCAL: *ORACLE_HOST
   ORACLE_PORT_LOCAL: *ORACLE_PORT
@@ -132,17 +136,20 @@ services:
 
   # data-load here doesn't work references non existing shell script
   postgres-data-load:
-    image: nr-fds-pyetl-oracle-data-load:latest
+    image: nr-fds-pyetl-oracle-spar-data-load:latest
     build:
         context: ./  # Path to the directory containing the Dockerfile
         dockerfile: Dockerfile.dbutils  # Name of the Dockerfile (optional if named "Dockerfile")
     # image: python:3.13-slim-bookworm
     container_name: postgres-data-load
     working_dir: /app
-    entrypoint: ["python", "db_env_utils/main_ingest.py", OC_POSTGRES, TEST]
+    #entrypoint: ["python", "db_env_utils/main_ingest.py", OC_POSTGRES, TEST]
+    entrypoint: ["bash", "/app/run_data_inject_oc.sh"]
+
     volumes:
       - "./docker-compose.yml:/app/docker-compose.yml"
-      - "./ora-env/data/docker:/app/data"
+      #- "./ora-env/data/docker:/app/data"
+      - "oracle-spar-data-load:/app/data"
 
     environment:
       <<: [*postgres-vars]
@@ -174,9 +181,9 @@ services:
       - oracle-data:/opt/oracle/oradata  # Mount the volume to the Oracle data directory
       - ./data_prep/ora_db_init/db_init/db_init.sql:/container-entrypoint-initdb.d/my-init.sql:ro
 
-  oracle-migrations:
+  oracle-spar-migrations:
     image: flyway/flyway:10-alpine
-    container_name: oracle-migrations
+    container_name: oracle-spar-migrations
     command: info migrate info
     volumes:
       - "./ora-env/migrations/ora:/flyway/sql:ro"
@@ -191,28 +198,29 @@ services:
         condition: service_healthy
 
   # doesnt work, references non existing shell script
-  oracle-data-load:
-    image: nr-fds-pyetl-oracle-data-load:latest
+  oracle-spar-data-load:
+    image: nr-fds-pyetl-oracle-spar-data-load:latest
+    user: "0:0"
     build:
         context: ./  # Path to the directory containing the Dockerfile
         dockerfile: Dockerfile.dbutils  # Name of the Dockerfile (optional if named "Dockerfile")
     # image: python:3.13-slim-bookworm
-    container_name: oracle-data-load
+    container_name: oracle-spar-data-load
     # "CMD",
     # entrypoint: [ "/application/docker_run_ORA_TEST.sh"]
     working_dir: /app
-    entrypoint: ["python", "db_env_utils/main_ingest.py", ORA, TEST]
+    # entrypoint: ["python", "db_env_utils/main_ingest.py", ORA, PROD]
+    entrypoint: ["bash", "/app/run_data_inject_ora.sh"]
     volumes:
-      # - "./data_prep:/app"
-      - "./docker-compose.yml:/app/docker-compose.yml"
-      - "./ora-env/data/docker:/app/data"
-      - "./ora-env/data/temp/data_classification.xlsx:/app/data/temp/data_classification.xlsx"
-    environment:
-      <<: [*oracle-vars]
+      - "oracle-spar-data-load:/app/data"
+      - "./ora-env/data/temp/data_classification.xlsx:/app/data_classification.xlsx"
     env_file:
       - ".env"
+    environment:
+      <<: [*oracle-vars]
+
     depends_on:
-      oracle-migrations:
+      oracle-spar-migrations:
         condition: service_completed_successfully
 
   # debug service, useful for understanding how environment variables work
@@ -221,7 +229,7 @@ services:
     image: functions/alpine:health
     command: ["/bin/sh", "-c", "echo Postgres and Oracle envs now live!"]
     depends_on:
-      oracle-data-load:
+      oracle-spar-data-load:
         condition: service_completed_successfully
       postgres-data-load:
         condition: service_completed_successfully
@@ -237,15 +245,18 @@ services:
       EXECUTION_ID: 9999
       ORACLE_PORT: *ORACLE_PORT
       ORACLE_SERVICE: *ORACLE_DATABASE
+      ORA_NON_ENCRYPT_LISTENER: True
     command: ["python", "/app/src/main.py"]
     # command: ["sleep", "10000"]
     volumes:
     - "./sync/src:/app/src"
-    - "./sync/poetry.lock:/application/poetry.lock"
+    - "./sync/uv.lock:/application/uv.lock"
     - "./sync/pyproject.toml:/application/pyproject.toml"
     depends_on:
       etl-env-setup:
         condition: service_completed_successfully
+
+
 
   cloudbeaver:
     profiles: ["cloudbeaver"]
@@ -274,3 +285,4 @@ services:
 volumes:
   oracle-data:
   postgres-migrations-volume:
+  oracle-spar-data-load:
