--- a/.github/workflows/etl-test.yml
+++ b/.github/workflows/etl-test.yml
@@ -14,7 +14,7 @@ jobs:
     environment: test
     runs-on: ubuntu-24.04
     steps:
-      - uses: bcgov/action-oc-runner@v1.2.3
+      - uses: bcgov/action-oc-runner@f900830adadd4d9eef3ca6ff80103e839ba8b7c0 #v1.3.0
         with:
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
