--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -78,10 +78,8 @@ jobs:
     name: Deploy
     environment: ${{ inputs.environment }}
     runs-on: ubuntu-24.04
-    timeout-minutes: 5
     steps:
       - uses: bcgov/action-deployer-openshift@v4.0.0
-        timeout-minutes: 5
         with:
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
@@ -92,6 +90,7 @@ jobs:
             -p TAG=${{ inputs.tag }}
             -p TEST_MODE=${{ inputs.test-mode }}
             -p SECRETS_FROM=${{ inputs.secrets-from }}
+          timeout: 5
           triggers: ${{ inputs.triggers }}
 
   etl-run:
@@ -99,13 +98,12 @@ jobs:
     if: inputs.run-etl == true
     needs: [deploy]
     runs-on: ubuntu-24.04
-    timeout-minutes: 10
     steps:
-      - timeout-minutes: 10
-        uses: bcgov/action-oc-runner@f900830adadd4d9eef3ca6ff80103e839ba8b7c0 #v1.3.0
+      - uses: bcgov/action-oc-runner@f900830adadd4d9eef3ca6ff80103e839ba8b7c0 #v1.3.0
         with:
           commands: ./sync/oc_run.sh ${{ inputs.target }}
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
+          timeout: 10
           triggers: ${{ inputs.triggers }}
