--- a/.github/workflows/etl-test.yml
+++ b/.github/workflows/etl-test.yml
@@ -14,17 +14,17 @@ jobs:
     environment: test
     runs-on: ubuntu-24.04
     steps:
-      - timeout-minutes: 10
-        uses: bcgov/action-oc-runner@v1.2.3
+      - uses: bcgov/action-oc-runner@f900830adadd4d9eef3ca6ff80103e839ba8b7c0 #v1.3.0
         with:
           oc_namespace: ${{ vars.OC_NAMESPACE }}
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
+          timeout: 60
           commands: ./sync/oc_run.sh test ${{ secrets.oc_token }}
 
       - uses: simbo/msteams-message-card-action@latest
         name: Notify Microsoft Teams
-        if: always()  # this ensures it runs even if earlier steps fail
+        if: always() # this ensures it runs even if earlier steps fail
         with:
           webhook: ${{ secrets.MS_TEAMS_WEBHOOK_URI }}
           title: "Spar ETL Sync Job status - (env=TEST)"
@@ -33,4 +33,3 @@ jobs:
             Completed with status: **${{ job.status }}** \
             View run [here](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
           color: ${{ job.status == 'success' && '00FF00' || 'FF0000' }}
-
