--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -90,7 +90,7 @@ jobs:
             -p TAG=${{ inputs.tag }}
             -p TEST_MODE=${{ inputs.test-mode }}
             -p SECRETS_FROM=${{ inputs.secrets-from }}
-          timeout: 5
+          timeout: 5m
           triggers: ${{ inputs.triggers }}
 
   etl-run:
